lang/macro/tests/ui/contract/fail/25-vec-unit-return.stderr
error[E0277]: the trait bound `(): You_Should_Use_An_Valid_Parameter_Type` is not satisfied
  --> $DIR/25-vec-unit-return.rs:12:28
   |
12 |         pub fn noop(&self) -> Vec<()> {}
   |                            ^^^^^^^^^^ the trait `You_Should_Use_An_Valid_Parameter_Type` is not implemented for `()`
   |
   = note: required because of the requirements on the impl of `You_Should_Use_An_Valid_Return_Type` for `std::vec::Vec<()>`
